@@ -18,13 +18,23 @@ kotlin {
 }
 
 application {
-//    mainClass = 'org.bitcoinj.secp.kotlin.examples.Ecdsa'
     mainClass = 'org.bitcoinj.secp.kotlin.examples.Schnorr'
 }
 
+def userHome = System.getProperty("user.home")
+def javaLibraryPath = findProperty("javaPath") ?: "${userHome}/.nix-profile/lib"
+
 run {
-    def userHome = System.getProperty("user.home")
-    systemProperty "java.library.path", findProperty("javaPath") ?: "${userHome}/.nix-profile/lib"
+    systemProperty "java.library.path", javaLibraryPath
     jvmArgs += '--enable-native-access=ALL-UNNAMED'
 }
 
+tasks.register('runEcdsa', JavaExec) {
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(22)
+    }
+    systemProperty "java.library.path", javaLibraryPath
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'org.bitcoinj.secp.kotlin.examples.Ecdsa'
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+}
